some changes in settings tab-s

--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -25,13 +25,13 @@ navigation history that also transitions its views in and out.
     <ion-nav-view name="tab-home"></ion-nav-view>
   </ion-tab>
 
-  <!-- History Tab -->  <!-- change name and icon -->
-  <ion-tab title="About" icon="ion-ios-star" href="#/tab/facts">
-    <ion-nav-view name="facts-tab"></ion-nav-view>
+  <!-- Statistics Tab -->  <!-- and icon -->
+  <ion-tab title="Statistic" icon-off="ion-ios-pulse" icon-on="ion-ios-pulse-strong" href="#/tab/stats">
+    <ion-nav-view name="tab-stats"></ion-nav-view>
   </ion-tab>
 
   <!-- Settings Tab --> <!-- change name -->
-  <ion-tab title="Contact" icon="ion-gear-a" href="#/tab/settings">
-    <ion-nav-view name="settings-tab"></ion-nav-view>
+  <ion-tab title="Settings" icon="ion-gear-a" href="#/tab/settings">
+    <ion-nav-view name="tab-settings"></ion-nav-view>
   </ion-tab>
 </ion-tabs>
