--- a/www/templates/tab-home.html
+++ b/www/templates/tab-home.html
@@ -33,13 +33,37 @@
       </div>
     </div>
 
-    <div class="row">
-      <div class="progress progress-striped active">
-        <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%">
-          <span class="sr-only">40% Complete (success)</span>
-        </div>
+    <!-- progressbar added by shanika-->
+    <div ng-controller="progressBar" class="container">
+
+      <div class="page-header">
+        <h5>This month usage</h5>
       </div>
+
+      <progressbar class="progress-striped active" animate="true" max="100" value="progressValue" type="success">
+        <i><span count-to="{{countTo}}" duration="1" count-from="{{countFrom}}"></span> / 100</i>
+      </progressbar>
+
     </div>
+
+    <!--<div ng-app="myApp" ng-controller="progressBar" class="container">-->
+
+      <!--<div class="page-header">-->
+        <!--<h1><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/15309/angular-logo.svg" alt="Angular.js Logo" width="50" height="50" /> Angular UI <small>Progress Bar</small></h1>-->
+      <!--</div>-->
+
+      <!--<progressbar class="progress-striped active" animate="true" max="100" value="progressValue" type="success"><i><span count-to="{{countTo}}" duration="1" count-from="{{countFrom}}"></span> / 100</i></progressbar>-->
+
+    <!--</div>-->
+
+    <!-- nadun's progress bar-->
+    <!--<div class="row">-->
+      <!--<div class="progress progress-striped active">-->
+        <!--<div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%">-->
+          <!--<span class="sr-only">40% Complete (success)</span>-->
+        <!--</div>-->
+      <!--</div>-->
+    <!--</div>-->
   </ion-content>
 </ion-view>
 
