--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -30,7 +30,12 @@ navigation history that also transitions its views in and out.
     <ion-nav-view name="tab-stats"></ion-nav-view>
   </ion-tab>
 
-  <!-- Settings Tab --> <!-- change name -->
+  <!-- Notifications Tab -->
+  <ion-tab title="Notifications" icon-off="ion-android-notifications-none" icon-on="ion-android-notifications" href="#/tab/notifications">
+    <ion-nav-view name="tab-notifications"></ion-nav-view>
+  </ion-tab>
+
+  <!-- Settings Tab -->
   <ion-tab title="Settings" icon="ion-gear-a" href="#/tab/settings">
     <ion-nav-view name="tab-settings"></ion-nav-view>
   </ion-tab>
