modified settings view

--- a/www/templates/tab-settings.html
+++ b/www/templates/tab-settings.html
@@ -1,28 +1,86 @@
 <ion-view view-title="Settings">
   <ion-content class="padding">
-    <div class="list card">
-      <div class="item item-divider">Upcoming</div>
-      <div class="item item-body">
-        <div>
-          You have <b>29</b> meetings on your calendar tomorrow.
+    <!--<div class="list card">-->
+      <!--<div class="item item-divider">Upcoming</div>-->
+      <!--<div class="item item-body">-->
+        <!--<div>-->
+          <!--You have <b>29</b> meetings on your calendar tomorrow.-->
+        <!--</div>-->
+        <!--<div>-->
+          <!--You have <b>29</b> meetings on your calendar tomorrow.-->
+        <!--</div>-->
+      <!--</div>-->
+
+      <!--<ion-list>-->
+        <!--<ion-toggle  ng-model="settings.upComing">-->
+          <!--Enable Friends-->
+        <!--</ion-toggle>-->
+      <!--</ion-list>-->
+
+    <!--</div>-->
+    <ul class="list">
+      <li class="item">
+        <div class="row">
+          <div class="col col-75">
+            <label> Set Units per month:</label>
+          </div>
+          <div class="col col-25">
+            <label class="item item-input">
+              <input type="number" placeholder="Units">
+            </label>
+          </div>
         </div>
-        <div>
-          You have <b>29</b> meetings on your calendar tomorrow.
+      </li>
+      <li class="item">
+        <div class="row">
+          <div class="col col-75">
+            <label> Set Monthly amount:</label>
+          </div>
+          <div class="col col-25">
+            <label class="item item-input">
+              <input type="number" placeholder="amount">
+            </label>
+          </div>
         </div>
-      </div>
+      </li>
+      <li class="item">
+        <div class="row">
+          <div class="col col-75">
+            <label> Set Month Start Date:</label>
+          </div>
+          <div class="col col-25">
+            <label class="item item-input">
+              <input type="date" placeholder="Date">
+            </label>
+          </div>
+        </div>
+      </li>
+      <li class="item">
+        <div class="row">
+          <div class="col col-75">
+            <label> Set Notification Method:</label>
+          </div>
+          <div class="col col-25">
+            <label class="item item-select">
+              <select>
+                <option>Method 1</option>
+                <option selected>Method 2</option>
+                <option>Method 3</option>
+              </select>
+            </label>
+          </div>
+        </div>
+      </li>
 
-      <ion-list>
-        <ion-toggle  ng-model="settings.enableFriends">
-          Enable Friends
-        </ion-toggle>
-      </ion-list>
+    </ul>
 
-    </div>
+    <!--<ion-list>-->
+      <!--<ion-toggle  ng-model="settings.enableFriends">-->
+        <!--Enable Friends-->
+      <!--</ion-toggle>-->
+    <!--</ion-list>-->
 
-    <ion-list>
-      <ion-toggle  ng-model="settings.enableFriends">
-        Enable Friends
-      </ion-toggle>
-    </ion-list>
+
+
   </ion-content>
 </ion-view>
