--- a/www/templates/tab-home.html
+++ b/www/templates/tab-home.html
@@ -47,9 +47,12 @@
 
     <div class="container">
       <ul class="list">
-        <li class="item">
-          Ideal Usage
-        </li>
+        <li class="item">Ideal Usage</li>
+        <li class="item">Ideal Usage</li>
+        <li class="item">Ideal Usage</li>
+        <li class="item">Ideal Usage</li>
+        <li class="item">Ideal Usage</li>
+        <li class="item">Ideal Usage</li>
       </ul>
     </div>
 
