--- a/www/templates/tab-settings.html
+++ b/www/templates/tab-settings.html
@@ -44,7 +44,7 @@
           </div>
           <div class="col col-50">
             <label class="item item-select">
-              <select style="max-width: 100%;">
+              <select>
                 <option>Method 1</option>
                 <option selected>Method 2</option>
                 <option>Method 3</option>
