--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -26,7 +26,7 @@ navigation history that also transitions its views in and out.
   </ion-tab>
 
   <!-- Statistics Tab -->  <!-- and icon -->
-  <ion-tab title="Statistic" icon-off="ion-ios-pulse" icon-on="ion-ios-pulse-strong" href="#/tab/stats">
+  <ion-tab title="Statistic" icon="ion-stats-bars" href="#/tab/stats">
     <ion-nav-view name="tab-stats"></ion-nav-view>
   </ion-tab>
 
