home controller developing cntns

--- a/www/templates/tab-home.html
+++ b/www/templates/tab-home.html
@@ -1,5 +1,6 @@
 <ion-view view-title="Home">
   <ion-content class="padding">
+
     <div class="row">
       <div class="col col-33">
         <div class="card">
@@ -11,6 +12,7 @@
           </div>
         </div>
       </div>
+
       <div class="col col-33">
         <div class="card">
           <div class="item item-divider text-center">Quota left :</div>
@@ -21,12 +23,13 @@
           </div>
         </div>
       </div>
+
       <div class="col col-33">
         <div class="card">
           <div class="item item-divider text-center">Per day :</div>
           <div class="item item-body text-center">
             <div>
-              <b>Rs.50.00</b>
+              <b>Rs.{{UnitsPM}}</b>
             </div>
           </div>
         </div>
