--- a/www/templates/tab-home.html
+++ b/www/templates/tab-home.html
@@ -1,9 +1,13 @@
 <ion-view view-title="Home">
   <ion-content class="padding">
 
-    <div class="page-header">
-      <h5 class="text-center"><b>REMAINING</b></h5>
+    <div class="list">
+
+      <div class="item item-divider">
+        <h5 class="text-center"><b>REMAINING</b></h5>
+      </div>
     </div>
+
     <div class="row">
       <div class="col col-33">
         <div class="card">
