--- a/www/templates/tab-home.html
+++ b/www/templates/tab-home.html
@@ -1,11 +1,8 @@
 <ion-view view-title="Home">
   <ion-content class="padding">
-    
-    <div class="list">
 
-      <div class="item item-divider">
-        <h5 class="text-center"><b>REMAINING</b></h5>
-      </div>
+    <div class="page-header">
+      <h5 class="text-center"><b>REMAINING</b></h5>
     </div>
 
     <div class="row">
