date picker was added

--- a/www/templates/tab-home.html
+++ b/www/templates/tab-home.html
@@ -33,7 +33,7 @@
           <div class="item item-divider text-center">Per day :</div>
           <div class="item item-body text-center">
             <div>
-              <b>Rs.{{UnitsPM}}</b>
+              <b>Rs.{{input.UnitsPM}}</b>
             </div>
           </div>
         </div>
@@ -74,7 +74,7 @@
           <span class="badge badge-balanced">put period from variable</span>
         </li>
         <li class="item">Today date
-          <span class="badge badge-positive">date</span>
+          <span class="badge badge-positive">{{Tdate}}</span>
         </li>
       </ul>
     </div>
