--- a/www/templates/tab-notifications.html
+++ b/www/templates/tab-notifications.html
@@ -10,3 +10,17 @@
 
   </ion-content>
 </ion-view>
+
+
+<!--<ion-view title="Home">-->
+<!--<ion-content class="padding">-->
+<!--<div class="list card">-->
+<!--<div class="item item-divider">Upcoming</div>-->
+<!--<div class="item item-body">-->
+<!--<div>-->
+<!--You have <b>29</b> meetings on your calendar tomorrow.-->
+<!--</div>-->
+<!--</div>-->
+<!--</div>-->
+<!--</ion-content>-->
+<!--</ion-view>-->
