--- a/www/templates/tab-settings.html
+++ b/www/templates/tab-settings.html
@@ -33,8 +33,8 @@
           </div>
           <div class="col col-50">
 
-            <ionic-datepicker date="currentDate" min="minDate" max="maxDate" callback="datePickerCallback">
-              <button class="button button-block button-positive"> {{ currentDate | date:'MMMM/dd/yyyy' }} </button>
+            <ionic-datepicker input-obj="datepickerObject">
+              <button class="button button-block button-positive"> {{datepickerObject.inputDate | date:'dd - MMMM - yyyy'}}</button>
             </ionic-datepicker>
 
           </div>
