--- a/www/templates/tab-settings.html
+++ b/www/templates/tab-settings.html
@@ -20,7 +20,7 @@
           </div>
           <div class="col col-50">
             <label class="item item-input">
-              <input type="number" placeholder="{{input.UnitsPM}}" ng-model="input.UnitsPM">
+              <input type="number" placeholder="{{input.AmountPM}}" ng-model="input.AmountPM">
 
             </label>
           </div>
