--- a/www/templates/tab-home.html
+++ b/www/templates/tab-home.html
@@ -37,7 +37,7 @@
           <div class="item item-divider text-center">Per day :</div>
           <div class="item item-body text-center">
             <div>
-              <b>Rs.{{input.AmountPM/remainingDays}}</b>
+              <b>Rs.{{(input.AmountPM - MoneyToPay) / remainingDays}}</b>
 
             </div>
           </div>
