--- a/www/templates/tab-home.html
+++ b/www/templates/tab-home.html
@@ -3,13 +3,14 @@
 
     <div class="page-header">
       <h5 class="text-center"><b>REMAINING</b></h5>
+      <button class="button button-small button-assertive" ng-click="countUnits();">
+        plus +
+      </button>
 
     </div>
 
     <div class="row" ng-controller="progressBar">
-      <button class="button button-small button-assertive" ng-click="countUnits();">
-        plus +
-      </button>
+
       <div class="col col-33">
         <div class="card">
           <div class="item item-divider text-center">Days :</div>
@@ -26,7 +27,7 @@
           <div class="item item-divider text-center">Quota :</div>
           <div class="item item-body text-center">
             <div>
-              <b>Rs.{{input.AmountPM - MoneyToPay}}</b>
+              <b>Rs.{{(input.AmountPM - MoneyToPay).toFixed(2)}}</b>
             </div>
           </div>
         </div>
@@ -37,7 +38,7 @@
           <div class="item item-divider text-center">Per day :</div>
           <div class="item item-body text-center">
             <div>
-              <b>Rs.{{input.AmountPM/remainingDays}}</b>
+              <b>Rs.{{(input.AmountPM/remainingDays).toFixed(2)}}</b>
 
             </div>
           </div>
@@ -53,7 +54,7 @@
       </div>
 
       <label class="row text-center">
-        <div class="col col-33">This month usage :</div><div class="col col-33">{{input.count}} units of {{DesiredUnits}}</div><div class="col col-33">Rs.{{MoneyToPay}} of Rs.{{input.AmountPM}}</div>
+        <div class="col col-33">This month usage :</div><div class="col col-33">{{input.count}} units of {{DesiredUnits.toFixed(2)}}</div><div class="col col-33">Rs.{{MoneyToPay.toFixed(2)}} of Rs.{{input.AmountPM}}</div>
       </label>
 
       <progressbar class="progress-striped active" animate="true" max="100" value="(input.count/DesiredUnits)*100" type="success">
