--- a/www/templates/tab-stats.html
+++ b/www/templates/tab-stats.html
@@ -14,13 +14,13 @@
 
       <!-- try bootstrap dropdown-->
 
-      <canvas id="daily" class="chart chart-line chart-xl" data="data" labels="labels" chart-series="series" chart-legend="true" options="options"></canvas>
+      <canvas id="daily" class="chart chart-line chart-xl" data="data" labels="labels" chart-series="series" chart-legend="true" options="options" chart-click="onClick"></canvas>
 
       <div class="page-header">
         <h5 class="text-center"><b>MONTHLY USAGE</b></h5>
       </div>
 
-      <canvas id="monthly" class="chart chart-line" chart-data="data" chart-labels="labels" chart-series="series" chart-legend="true" chart-click="onClick"></canvas>
+      <canvas id="monthly" class="chart chart-line" chart-data="data2" chart-labels="labels2" chart-series="series2" chart-legend="true" chart-click="onClick"></canvas>
 
     </div>
 
