--- a/www/templates/tab-home.html
+++ b/www/templates/tab-home.html
@@ -64,7 +64,7 @@
     <div class="container">
       <ul class="list">
         <li class="item">Ideal Usage
-          <span class="badge badge-balanced">25 units</span>
+          <span class="badge badge-balanced">Rs.{{idealUsage.toFixed(0)}}</span>
         </li>
         <li class="item">Usage Status
           <span class="badge badge-balanced">20 units less than ideal</span>
